# rkt-coreutils

./: .gitignore  BUILDING.md  Makefile  README.md  ls.rkt  ls.rkt~  make-launchers.sh  stat.rkt
docs/html/: base64.html  cat.html  echo.html  false.html  groups.html  head.html  id.html  ls.html  md5sum.html  nl.html  sha1sum.html  sha224sum.html  sha256sum.html  sha384sum.html  sha512sum.html  sort.html  stat.html  tac.html  tail.html  true.html  users.html  who.html  whoami.html
docs/md/: base64.md  cat.md  echo.md  false.md  groups.md  head.md  id.md  ls.md  md5sum.md  nl.md  sha1sum.md  sha224sum.md  sha256sum.md  sha384sum.md  sha512sum.md  sort.md  stat.md  tac.md  tail.md  true.md  users.md  who.md  whoami.md
scribbles/: cat.scrbl  copyright.scrbl  echo.scrbl  false.scrbl  ls.scrbl  md5sum.scrbl  stat.scrbl
scribblings/: BUILDING.scrbl  README.scrbl  author.scrbl  base64.scrbl  cat.scrbl  copyright.scrbl  echo.scrbl  groups.scrbl  head.scrbl  id.scrbl  ls.scrbl  nl.scrbl  sha1sum.scrbl  sha224sum.scrbl  sha256sum.scrbl  sha384sum.scrbl  sha512sum.scrbl  sort.scrbl  tac.scrbl  tail.scrbl  true.scrbl  uniq.scrbl  users.scrbl  who.scrbl  whoami.scrbl
src/: base64.rkt  basename.rkt  cat.rkt  df.rkt  echo.rkt  false.rkt  groups.rkt  head.rkt  hostid.rkt  hostname.rkt  id.rkt  logname.rkt  ls.rkt  md5sum.rkt  nl.rkt  nproc.rkt  realpath.rkt  sha1sum.rkt  sha224sum.rkt  sha256sum.rkt  sha384sum.rkt  sha512sum.rkt  sort.rkt  stat.rkt  tac.rkt  tail.rkt  true.rkt  tty.rkt  uniq.rkt  uptime.rkt  users.rkt  who.rkt  whoami.rkt
src/c/: getstatvfs.c  stat.c  sum.c
src/c/fadvise/: fadvise.c  fadvise.h
src/c/gnulib/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/c/gnulib/autom4te.cache/: output.1  requests  traces.0  traces.1
src/c/gnulib/gllib/: Makefile.am  Makefile.in  alloca.h  fcntl.h  inttypes.h  limits.h  locale.h  stdio.h  stdlib.h  string.h  time.h  wchar.h  wctype.h
src/c/gnulib/glm4/: Makefile.am  Makefile.in
src/libc/: grp.rkt  pwd.rkt  stat.rkt  statvfs.rkt  stdlib.rkt  unistd.rkt  utmp.rkt
src/repl/: arch.rkt  base64.rkt  basename.rkt  cat.rkt  cksum.rkt  df.rkt  groups.rkt  head.rkt  hostid.rkt  hostname.rkt  id.rkt  logname.rkt  ls.rkt  md5sum.rkt  nl.rkt  nproc.rkt  realpath.rkt  seq.rkt  sha1sum.rkt  sha224sum.rkt  sha256sum.rkt  sha384sum.rkt  sha512sum.rkt  sort.rkt  stat.rkt  sum.rkt  tac.rkt  tail.rkt  tty.rkt  uname.rkt  uniq.rkt  uptime.rkt  users.rkt  who.rkt  whoami.rkt  yes.rkt
src/repl-shell/: shell.rkt
src/repl/libc/: ffi.rkt  grp.rkt  nproc.rkt  pwd.rkt  stat.rkt  statvfs.rkt  stdlib.rkt  sum.rkt  unistd.rkt  utmp.rkt  utsname.rkt
src/repl/libc/src/: a.out  getgrouplist.c
src/repl/typedef/: getgrouplist.rkt  getpwnam.rkt  getutmp.rkt
src/repl/util/: attribute.rkt  file-by-file-processor.rkt  fileaccessstr.rkt  getutmp.rkt  gidutil.rkt  help.rkt  human-date.rkt  human-size.rkt  line-by-line-processor.rkt  member.rkt  repl-program.rkt  util.rkt
src/repl/util/program/: file-by-file-processor-program.rkt  getusernameprogram.rkt  line-by-line-processor-program.rkt  repl-program.rkt  shaprogram.rkt
src/typedef/: getgrgid.rkt  getpwuid.rkt  getutmp.rkt  stat.rkt
src/util/: fileaccessoct.rkt  fileaccessstr.rkt  frontend-program.rkt  human-date.rkt  human-size.rkt  member.rkt  param.rkt  simple-file-handler-program.rkt  simple-program.rkt  stringutil.rkt  truefalseprogram.rkt  version.rkt
