## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += extern-inline.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += minmax.m4
EXTRA_DIST += nproc.m4
EXTRA_DIST += off_t.m4
EXTRA_DIST += pid_t.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += stdbool.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += sys_types_h.m4
EXTRA_DIST += unistd_h.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_t.m4
EXTRA_DIST += zzgnulib.m4
