## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += alloca.m4
EXTRA_DIST += close.m4
EXTRA_DIST += codeset.m4
EXTRA_DIST += double-slash-root.m4
EXTRA_DIST += dup2.m4
EXTRA_DIST += eealloc.m4
EXTRA_DIST += errno_h.m4
EXTRA_DIST += error.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += extern-inline.m4
EXTRA_DIST += fcntl-o.m4
EXTRA_DIST += fcntl.m4
EXTRA_DIST += fcntl_h.m4
EXTRA_DIST += fstat.m4
EXTRA_DIST += getdtablesize.m4
EXTRA_DIST += getprogname.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += human.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += largefile.m4
EXTRA_DIST += limits-h.m4
EXTRA_DIST += localcharset.m4
EXTRA_DIST += locale-fr.m4
EXTRA_DIST += locale-ja.m4
EXTRA_DIST += locale-zh.m4
EXTRA_DIST += locale_h.m4
EXTRA_DIST += localeconv.m4
EXTRA_DIST += malloca.m4
EXTRA_DIST += mbrtowc.m4
EXTRA_DIST += mbsinit.m4
EXTRA_DIST += mbstate_t.m4
EXTRA_DIST += minmax.m4
EXTRA_DIST += mode_t.m4
EXTRA_DIST += msvc-inval.m4
EXTRA_DIST += msvc-nothrow.m4
EXTRA_DIST += multiarch.m4
EXTRA_DIST += nproc.m4
EXTRA_DIST += off_t.m4
EXTRA_DIST += open-cloexec.m4
EXTRA_DIST += open-slash.m4
EXTRA_DIST += open.m4
EXTRA_DIST += pathmax.m4
EXTRA_DIST += pid_t.m4
EXTRA_DIST += quote.m4
EXTRA_DIST += quotearg.m4
EXTRA_DIST += read.m4
EXTRA_DIST += safe-read.m4
EXTRA_DIST += setlocale_null.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += stat-time.m4
EXTRA_DIST += stat.m4
EXTRA_DIST += std-gnu11.m4
EXTRA_DIST += stdbool.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += stdint.m4
EXTRA_DIST += stdio_h.m4
EXTRA_DIST += stdlib_h.m4
EXTRA_DIST += strerror.m4
EXTRA_DIST += string_h.m4
EXTRA_DIST += strtoull.m4
EXTRA_DIST += strtoumax.m4
EXTRA_DIST += sys_socket_h.m4
EXTRA_DIST += sys_stat_h.m4
EXTRA_DIST += sys_types_h.m4
EXTRA_DIST += threadlib.m4
EXTRA_DIST += time_h.m4
EXTRA_DIST += unistd_h.m4
EXTRA_DIST += visibility.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_h.m4
EXTRA_DIST += wchar_t.m4
EXTRA_DIST += wctype_h.m4
EXTRA_DIST += wint_t.m4
EXTRA_DIST += xalloc.m4
EXTRA_DIST += xstrtol.m4
EXTRA_DIST += zzgnulib.m4
